# src/model/api/externalStorage/IExternalStorageApiModel.ts
@@ -3,4 +3,5 @@ import * as apid from '../../../../api';
 export default interface IExternalStorageApiModel {
     getList(): apid.ExternalStorageList;
     getFiles(storageName: string, subPath: string): Promise<apid.ExternalStorageFileList>;
+    rename(storageName: string, subPath: string, newName: string): Promise<void>;
 }
